# leptos-repro

./: .gitignore  Cargo.toml  flake.nix  leptosfmt.toml  rust-toolchain.toml
.helix/: languages.toml
app/: Cargo.toml
app/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
locales/: en.json  fr.json
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
src/dummy/: mod.rs  nothing.rs
src/routes/: nav.rs
