[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_i18n.workspace = true

http.workspace = true
thiserror.workspace = true
# wasm-bindgen = { workspace = true, optional = true }  # uncomment to fix

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos_i18n/hydrate",
  # "dep:wasm-bindgen", # uncomment to fix
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "leptos_i18n/ssr",
]

[package.metadata.leptos-i18n]
default = "fr"
locales = ["fr", "en"]
locales-dir = "../locales"
