[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos-chartistry.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_i18n.workspace = true
leptos-use.workspace = true

chrono.workspace = true
coingecko = { workspace = true, optional = true }
http.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen = { workspace = true, optional = true }  # uncomment to fix

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos_i18n/hydrate",
  "dep:wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "leptos_i18n/axum",
  "leptos-use/ssr",
  "dep:coingecko",
]

[package.metadata.leptos-i18n]
default = "fr"
locales = ["fr", "en"]
locales-dir = "../locales"
